--- a/WhipperSnapper/app/src/main/res/layout/activity_waiting_for_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_waiting_for_chat.xml
@@ -50,7 +50,8 @@
         android:id="@+id/tvInstructionsLabel"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/light_primary_color"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_marginTop="20dp" />
 
     <Button
         android:layout_width="wrap_content"
