Added the correct launcher icon.

--- a/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
@@ -74,8 +74,9 @@
         android:layout_toStartOf="@+id/btnSend"
         android:layout_alignTop="@+id/btnSend"
         android:hint="@string/Say_something"
-        android:textColor="@color/text_on_primary_color"
-        android:background="@color/text_field_background" />
+        android:background="@color/text_field_background"
+        android:textColor="@color/text_field_foreground"
+        android:layout_margin="@dimen/small_button_margin" />
 
     <Button
         android:layout_width="wrap_content"
@@ -98,6 +99,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/lvChat"
-        android:layout_alignEnd="@+id/lvChat" />
+        android:layout_alignEnd="@+id/lvChat"
+        android:textColor="@color/light_primary_color" />
 
 </RelativeLayout>
