--- a/WhipperSnapper/app/src/main/res/layout/activity_show_task_details.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_show_task_details.xml
@@ -37,17 +37,28 @@
         android:layout_alignEnd="@+id/tvTaskDetailsSeniorName"
         android:textColor="@color/text_on_primary_color" />
 
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvTaskDetailsDetails"
+        android:id="@+id/scrollView"
         android:layout_below="@+id/ivTaskDetailsTaskPhoto"
+        android:layout_above="@+id/btnOffer"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="@color/text_on_primary_color"
-        android:textSize="20sp" />
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvTaskDetailsDetails"
+
+            android:textColor="@color/text_on_primary_color"
+            android:textSize="20sp" />
+
+        </ScrollView>
+
+
 
     <Button
         android:layout_width="wrap_content"
